src/test/deca/context/invalid/created/addition-impossible.deca
//Description:
//    test contexte error
//
// Resultats:
//    Error contextuelle
// 
// Historique:
//    cree le 01/01/2022
{
    1+true;
}